# MarStech_Vision_Sensor

./: CMakeLists.txt  README.TXT  README.md  README1.md  main.cpp
bar_mode/: README.TXT  bar_mode.cpp  bar_mode.h  bar_mode_test.cpp
color_mode/: README.TXT  color_mode.cpp  color_mode.h  color_mode_test.cpp
color_mode/uart_io/: uart_io.h
gpio_pi/: README.TXT  gpio_pi.cpp  gpio_pi.h  gpio_test.cpp  key_pi.cpp  key_pi.h  key_test.cpp  led_pi.cpp  led_pi.h  led_pi_test.cpp
lenet_num_mode/: CMakeLists.txt  lenet_num_mode.cpp  lenet_num_mode.h  lenet_test.cpp
lenet_num_mode/lenet/: lenet_iter_20000.caffemodel  synset_words.txt
sqz_mode/: CMakeLists.txt  README.TXT  sqz_mode.cpp  sqz_mode.h  sqz_test.cpp
sqz_mode/sqz_net/: bench_sqz.cpp
sqz_net/: synset_animal.txt
track_color_mode/: README.TXT  track_color_mode.cpp  track_color_mode.h  track_test.cpp
track_color_mode/uart_io/: uart_io.cpp
uart_io/: README.TXT  uart_io.cpp  uart_io.h  uart_io_test.cpp
